--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-    </title>
+    <title>
     	Janeil Patel
 	</title>
     </head>
 <body>
 	<h1>
-		This is the first Header
+		This site is a work in progress. 
 	</h1>
 </body>
 </html>
