--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
 <body>
 <!-- Navigation Bar -->
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -44,7 +44,7 @@
       </ul>
       <form class="navbar-form navbar-left">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search not available yet">
+          <input type="text" class="form-control" placeholder="Search not available">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
