Jumbotron plus Inverse navbar

--- a/index.html
+++ b/index.html
@@ -66,9 +66,13 @@
 </nav>
 
 <!-- End of Navigation Bar -->
-
-<h1>This site is a work in progress. </h1>
-
+<div class="container">
+ <div class="jumbotron">
+   <h1>Work in Progress</h1>
+   <p>Hello People</p>
+   <!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p> -->
+ </div>
+</div>
 
 </body>
 </html>
