--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#"> Home <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Projects</a></li>
+        <li><a href="projects/index.html">Projects</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Courses Taken <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -42,14 +42,14 @@
           </ul>
         </li>
       </ul>
-      <form class="navbar-form navbar-left">
+      <!-- <form class="navbar-form navbar-left">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search not available">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
-      </form>
+      </form> -->
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
+        <li><a href="photogallery/index.html">Photo Gallery</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -68,8 +68,11 @@
 <!-- End of Navigation Bar -->
 <div class="container">
  <div class="jumbotron">
-   <h1>Work in Progress</h1>
-   <p>Hello People</p>
+    <figure>
+    <img src="graphics/janeil1.jpg" width="250px" height="250px" >
+    <figcaption></figcaption>
+   </figure>
+   <h2>Hello World</h2>
    <!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p> -->
  </div>
 </div>
