--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <!-- End of Navigation Bar -->
 <div class="container">
  <div class="jumbotron">
-    <figure>
+    <figure text-align="center" >
     <img src="graphics/janeil1.jpg" width="250px" height="250px" >
     <figcaption></figcaption>
    </figure>
