--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <title>
     	Janeil Patel
 	</title>
+
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-
-
 	<link rel="stylesheet" type="text/css" href="styling.css">
+	
     </head>
 <body>
 <!-- Navigation Bar -->
@@ -21,7 +21,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Janeil Patel</a>
+      <a class="navbar-brand" href="./index.html">Janeil Patel</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -32,9 +32,9 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Courses Taken <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="#">DevOps</a></li>
+            <li><a href="#">Cloud Computing</a></li>
+            <li><a href="#">Programming in big data</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li>
             <li role="separator" class="divider"></li>
@@ -77,5 +77,6 @@
  </div>
 </div>
 
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 </body>
 </html>
