Courses Added with javascript

--- a/DevOps/index.html
+++ b/DevOps/index.html
@@ -1,14 +1,14 @@
-<!-- projects -->
+<!-- DevOps -->
 <!DOCTYPE html>
 <html>
     <head>
     <title>
     	Janeil Patel
 	</title>
+
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-
-
 	<link rel="stylesheet" type="text/css" href="styling.css">
+	
     </head>
 <body>
 <!-- Navigation Bar -->
@@ -22,18 +22,18 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Janeil Patel</a>
+      <a class="navbar-brand" href="./index.html">Janeil Patel</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="../index.html"> Home <span class="sr-only">(current)</span></a></li>
-        <li class="active"><a href="#">Projects</a></li>
-        <li class="dropdown">
+        <li ><a href="../index.html"> Home <span class="sr-only">(current)</span></a></li>
+        <li><a href="../projects/index.html">Projects</a></li>
+        <li class="active" class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Courses Taken <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="../DevOps/index.html">DevOps</a></li>
+            <li class="active"><a href="./index.html">DevOps</a></li>
             <li><a href="../CloudComputing/index.html">Cloud Computing</a></li>
             <li><a href="../BigData/index.html">Programming in Big Data</a></li>
             <li><a href="../NetSec/index.html">Network Security</a></li>
@@ -73,10 +73,16 @@
   </div><!-- /.container-fluid -->
 </nav>
 
+<!-- End of Navigation Bar -->
+<div class="container">
+ <div class="jumbotron">
+    
+   <h2>DevOps</h2>
+   <!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p> -->
+ </div>
+</div>
 
 <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
 </html>
-
-
