--- a/index.html
+++ b/index.html
@@ -32,13 +32,20 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Courses Taken <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">DevOps</a></li>
-            <li><a href="#">Cloud Computing</a></li>
-            <li><a href="#">Programming in big data</a></li>
-            <li role="separator" class="divider"></li>
+            <li><a href="DevOps/index.html">DevOps</a></li>
+            <li><a href="CloudComputing/index.html">Cloud Computing</a></li>
+            <li><a href="BigData/index.html">Programming in Big Data</a></li>
+            <li><a href="NetSec/index.html">Network Security</a></li>
+            <li><a href="CompNet/index.html">Computer Network</a></li>
+            <li><a href="PL/index.html">Programming Languages</a></li>
+            <li><a href="DSA/index.html">Datastructures and Algorithms</a></li>
+            <li><a href="DAA/index.html">Design and Analysis of Algorithms</a></li>
+            <li><a href="OS/index.html">Operating Systems</a></li>
+            <li><a href="CA/index.html">Computer Architecture 1</a></li>
+            <!--             <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+            <li><a href="#">One more separated link</a></li> -->
           </ul>
         </li>
       </ul>
@@ -77,6 +84,7 @@
  </div>
 </div>
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-2.1.4.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
 </html>
