--- a/photogallery/index.html
+++ b/photogallery/index.html
@@ -33,13 +33,20 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Courses Taken <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
+            <li><a href="../DevOps/index.html">DevOps</a></li>
+            <li><a href="../CloudComputing/index.html">Cloud Computing</a></li>
+            <li><a href="../BigData/index.html">Programming in Big Data</a></li>
+            <li><a href="../NetSec/index.html">Network Security</a></li>
+            <li><a href="../CompNet/index.html">Computer Network</a></li>
+            <li><a href="../PL/index.html">Programming Languages</a></li>
+            <li><a href="../DSA/index.html">Datastructures and Algorithms</a></li>
+            <li><a href="../DAA/index.html">Design and Analysis of Algorithms</a></li>
+            <li><a href="../OS/index.html">Operating Systems</a></li>
+            <li><a href="../CA/index.html">Computer Architecture 1</a></li>
+<!--             <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+            <li><a href="#">One more separated link</a></li> -->
           </ul>
         </li>
       </ul>
@@ -70,56 +77,75 @@
 
   <div class="jumbotron">
     <h1><i class="fa fa-camera-retro"></i> The Photo Gallery </h1>
-    <p> Attempt to capture my life on this page</p> 
+    <p> Attempt to capture my life on this page (Wait for Photos to be uploaded)</p> 
   </div>
 
     <div class="row">
       <div class="col-lg-4 col-sm-6">
         <div class="thumbnail">
-          <img src="http://i.imgur.com/qK42fUu.jpg">
+          <!-- <img src="graphics/janeil10.jpeg"> -->
         </div>
       </div>
       <div class="col-lg-4 col-sm-6">
         <div class="thumbnail">
-          <img src="https://images.unsplash.com/photo-1435771112039-1e5b2bcad966?dpr=2&fit=crop&fm=jpg&h=825&q=50&w=1450">
+          <!-- <img src="graphics/janeil3.jpeg"> -->
         </div>
       </div>
       <div class="col-lg-4 col-sm-6">
         <div class="thumbnail">
-          <img src="https://images.unsplash.com/photo-1442406964439-e46ab8eff7c4?dpr=2&fit=crop&fm=jpg&h=825&q=50&w=1450">
+          <!-- <img src="graphics/janeil2.jpeg"> -->
         </div>
       </div>
       <div class="col-lg-4 col-sm-6">
         <div class="thumbnail">
-          <img src="https://images.unsplash.com/photo-1439524970634-649c37a69e5c?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&w=1450&h=825&fit=crop&s=bfda9916c885869b43b70738693428d9">
+          <!-- <img src="graphics/janeil8.jpeg"> -->
         </div>
       </div>
       <div class="col-lg-4 col-sm-6">
         <div class="thumbnail">
-          <img src="https://images.unsplash.com/photo-1444090542259-0af8fa96557e?dpr=2&fit=crop&fm=jpg&h=825&q=50&w=1450">
+          <!-- <img src="graphics/janeil4.jpeg"> -->
         </div>
       </div>
       <div class="col-lg-4 col-sm-6">
         <div class="thumbnail">
-          <img src="https://images.unsplash.com/photo-1434543177303-ef2cc7707e0d?dpr=2&fit=crop&fm=jpg&h=825&q=50&w=1450">
+          <!-- <img src="graphics/janeil6.jpeg"> -->
         </div>
       </div>
       <div class="col-lg-4 col-sm-6">
         <div class="thumbnail">
-          <img src="https://images.unsplash.com/photo-1436262513933-a0b06755c784?dpr=2&fit=crop&fm=jpg&h=825&q=50&w=1450">
+          <!-- <img src="graphics/janeil9.jpeg"> -->
+        </div>
+      </div>
+      
+
+      <!-- <div class="col-lg-4 col-sm-6">
+      <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
+          <img src="graphics/janeil6.jpeg">
         </div>
       </div>
       <div class="col-lg-4 col-sm-6">
         <div class="thumbnail">
-          <img src="https://images.unsplash.com/photo-1439396087961-98bc12c21176?dpr=2&fit=crop&fm=jpg&h=825&q=50&w=1450">
+          <img src="graphics/janeil7.jpeg">
         </div>
       </div>
       <div class="col-lg-4 col-sm-6">
         <div class="thumbnail">
-          <img src="https://images.unsplash.com/photo-1439694458393-78ecf14da7f9?dpr=2&fit=crop&fm=jpg&h=825&q=50&w=1450">
+          <img src="graphics/janeil8.jpeg">
       </div>
     </div>
-  </div>
+    <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
+          <img src="graphics/janeil9.jpeg">
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6">
+        <div class="thumbnail">
+          <img src="graphics/janeil10.jpeg">
+        </div>
+   -->
+ </div>
+</div>
 
 <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
