--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="styling.css">
+  <link rel="stylesheet" type="text/javascript" href="code.js">
 	
     </head>
 <body>
@@ -48,6 +49,7 @@
             <li><a href="#">One more separated link</a></li> -->
           </ul>
         </li>
+        <li><a href="games/index.html">Games</a></li>
       </ul>
       <!-- <form class="navbar-form navbar-left">
         <div class="form-group">
@@ -71,17 +73,25 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-
 <!-- End of Navigation Bar -->
+
+<div class="first">
 <div class="container">
- <div class="jumbotron">
-    <figure text-align="center" >
+ <!-- <div class="jumbotron"> -->
+    <!-- <figure text-align="center" >
     <img src="graphics/janeil1.jpg" width="250px" height="250px" >
     <figcaption></figcaption>
-   </figure>
-   <h2>Hello World</h2>
+   </figure> -->
+   <h2> Hello </h2>
    <!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p> -->
- </div>
+ <!-- </div> -->
+</div>
+</div>
+<div class="second">
+<div class="container">
+  <h2> Second </h2>
+  
+</div>
 </div>
 
 <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
