--- a/games/index.html
+++ b/games/index.html
@@ -77,7 +77,7 @@
 
 <h2>List of Games</h2>
 <ol>
-  <li><a href="./minecart/index.html"></a> Minecart Madness</li>
+  <li><a href="minecart/index.html"> Minecart Madness</a></li>
 </ol>
 
 <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
