Styling and Course Description added

--- a/BigData/index.html
+++ b/BigData/index.html
@@ -79,6 +79,21 @@
     
    <h2>Programming in Big Data</h2>
    <!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p> -->
+   <h3>Course Description</h3>
+   <p>This course introduces the architectures and technologies at the foundation of the Big Data movement. These technologies facilitate scalable management and processing of vast quantities of data collected through near real-time sensing and bulk data ingest.
+
+Big Data requires the storage, organization, and processing of data at a scale and efficiency that go well beyond the capabilities of conventional information technologies. The course reviews the state of the art in Big Data analytics and in addition to covering the specifics of different platforms, models, and languages, students will look at real applications that perform massive data analysis and how they can be implemented on Big Data platforms.
+
+Topics discussed include: Map reduce/Hadoop, NoSQL stores, languages such as Pig Latin and JAQL, large-scale data mining and visualization. The curriculum will primarily consist of technical readings and discussions and will also include programming projects where participants will prototype data-intensive applications using existing Big Data tools and platforms.</p>
+
+  <h3>Course Objectives</h3>
+  <ol>
+    <li>To learn about basic concepts, technical challenges, and opportunities in big data management and big data analysis technologies.</li>
+    <li>To learn about common algorithmic and statistical techniques used to perform big data analysis.</li>
+    <li>To learn and get hands-on experience in using some data analysis and management tools such as Hadoop MapReduce, Pig Latin, and others.</li>
+    <li>To learn about different types of scenarios and applications in big data analysis, including for structured, semi structured, and unstructured data.  </li>
+    <li>We will use a suitable combination of technologies, including virtual machines, containers and cloud-based technologies (VM, NYU HPC Hadoop, AWS, Azure) for completing homework and projects. Students may also opt to create their own cloud-based Hadoop clusters. Since some students may not have experience with cloud technologies, we will cover the practical details of using the VMs and the NYU HPC.</li>
+  </ol>
  </div>
 </div>
 
