--- a/DAA/index.html
+++ b/DAA/index.html
@@ -79,6 +79,15 @@
     
    <h2>Design and Analysis of Algorithms</h2>
    <!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p> -->
+   <h3>Course Description</h3>
+   <p>Review of basic data structures and mathematical tools. Data structures: priority queues,
+      binary search trees, balanced search trees. B-trees. Algorithm design and analysis techniques illustrated in searching
+      and sorting: heapsort, quicksort, sorting in linear time, medians and order statistics. Design and analysis techniques:
+      dynamic programming, greedy algorithms. Graph algorithms: elementary graph algorithms (breadth-first search,
+      depth-first search, topological sort, connected components, strongly connected components), minimum spanning
+      trees, shortest paths. String algorithms. Geometric algorithms. Linear progsramming. Brief introduction to
+      NP-completeness.</p>
+   <!-- <h3></h3> -->
  </div>
 </div>
 
