--- a/DSA/index.html
+++ b/DSA/index.html
@@ -79,6 +79,8 @@
     
    <h2>Datastructure and Algorithms</h2>
    <!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p> -->
+   <h3>Course Desription</h3>
+   <h3>Course Objectives</h3>
  </div>
 </div>
 
