--- a/DevOps/index.html
+++ b/DevOps/index.html
@@ -49,6 +49,7 @@
             <li><a href="#">One more separated link</a></li> -->
           </ul>
         </li>
+        <li><a href="../games/index.html">Games</a></li>
       </ul>
       <!-- <form class="navbar-form navbar-left">
         <div class="form-group">
@@ -79,6 +80,18 @@
     
    <h2>DevOps</h2>
    <!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p> -->
+   <h3>Course Desription</h3>
+   <p>DevOps is the latest paradigm on how to develop software. It combines lean and agile development methods with the latest suit of operations tools to enable fast, worry-free, and regular shipping of code into production. The focus of the course will be on the DevOps way of working, but we will also survey the wide range of DevOps tools, and implement some of them.</p>
+
+   <h3>Course Objectives</h3>
+   <p>
+   <ol>
+   	<li>Understand the DevOps way of organizing work.</li>
+   	<li>Be familiar with the range of DevOps tools.</li>
+	<li>Understand how the tools support the way of work.</li>
+	<li>Become familiar with several particular tools.</li>
+   </ol>
+   </p>
  </div>
 </div>
 
