--- a/NetSec/index.html
+++ b/NetSec/index.html
@@ -78,7 +78,28 @@
  <div class="jumbotron">
     
    <h2>Network Security</h2>
-   <!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p> -->
+   <h3>Course Description</h3>
+   <p>Information is  a critical  asset in  both  the corporate/business  environment as  well  as  the military. The 
+      computer  networks  that  carry this  information are becoming  the “lifeblood” of  these government  and 
+      private sector  organizations.  Network security  is  an  increasingly  important topic in  order to  ensure  that
+      these mission critical  networks  remain  available and are resistant to  malicious use and attack.
+      In  order to  use a network a computer  user  relies  on  a number  of  services  in  the network This  course  
+      introduces  the student to  the fundamentals  of  the security  of  those network services  and how to  
+      establish a secure  networking  environment.  As  cryptography  is  an essential  tool  in  providing many  
+      network services we will  touch on  cryptography  in  this  course.
+      The emphasis  will  be  on  practical concepts  such  as  attack  methodologies, forensics defensive  techniques
+      and tools such  as  IDS,  firewalls,  VPNs, etc.  which are used  to  design  and build a secure  network. The  
+      student is  expected  to  write short Python/SCAPY  programs  in a  provided  lab environment that  illustrate  
+      the security  of  network services  and their protocols.</p>
+   <h3>Course Objectives</h3>
+   <ol>
+     <li>A  firm  grasp on how  networks  are attacked  and techniques  used.</li>
+     <li>An  understating  of  the inherent  insecurity  of  networking and  networking  protocols.</li>
+     <li>Understand  the fundamentals  of  secure  network design</li>
+     <li>Foundation  of  the issues  involved  in  providing secure  network communications</li>
+     <li>Understand  the underlying  cryptography  required  for electronic  commerce, secure communications  and authentication</li>
+     <li>Obtain  hands on  understanding of  network security  through laboratory  work.</li>
+   </ol>
  </div>
 </div>
 
