--- a/OS/index.html
+++ b/OS/index.html
@@ -79,6 +79,22 @@
     
    <h2>Operating System</h2>
    <!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p> -->
+   <h3>Course Desription</h3>
+   <p>This  is  a graduate-level  course  that  covers  an  introduction  to  operating systems.  It  is  
+      geared  at  graduate  students  who have  not had a good  undergraduate course  that  
+      covers  the principles  of  operating systems.  This  material  is  critical  for understanding 
+      anything  about what  is  really  going on  in  your  desktop,  your  laptop, your  phone and/or  
+      in  your  data  center. 
+      While it  covers material that  often finds its place in  undergraduate curricula,  we  will  be  
+      supplementing that  material  with  some  more  recent  results from  the systems literature, 
+      and we  will  doing a lot of  hands on  homework  to  see what  a real  operating system  looks 
+      like. 
+      In  addition, there is  the opportunity to  customize the material  based on  overall student 
+      background  entering  the course. Finally,  we  will  also  focus on  some  very  recent  
+      commercial  trends  in  the Operating Systems space,  with  particular  focus on  
+      virtualization  and how it  is  transforming  the way we  think about computing and the way 
+      that  every Fortune-1000  company manages its information technology  infrastructure.</p>
+<!-- <h3>Course Objectives</h3> -->
  </div>
 </div>
 
