--- a/PL/index.html
+++ b/PL/index.html
@@ -79,6 +79,19 @@
     
    <h2>Programming Language</h2>
    <!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p> -->
+   <h3>Course Desription</h3>
+   <p>This course covers the structures, notations and semantics of programming languages. Topics: Issues of scope, type
+      structure and parameter passing. Control structures, including support for exception handling and concurrency.
+      Abstract data types and object-oriented languages. Programming in the large. Implementation issues. Functional,
+      logic programming languages. Examples from a variety of languages.
+      This is not a class on any one programming language but a class on a series of concepts that underlie one of more
+      programming languages.</p>
+   <h3>Course Objectives</h3>
+   <ol>
+     <li>Understand different concepts and constructions across multiple programming languages</li>
+     <li>Be able to critique how one language provides support for a language concept versus another language.</li>
+     <li>Learn imperative, functional, logic and Object-Oriented programming languages</li>
+   </ol>
  </div>
 </div>
 
