--- a/CompNet/index.html
+++ b/CompNet/index.html
@@ -78,7 +78,23 @@
  <div class="jumbotron">
     
    <h2>Computer Network</h2>
-   <!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p> -->
+   <h3>Course Description</h3>
+   <p>This course takes a top-down approach to computer networking. After an overview of computer
+      networks and the Internet, the course covers the application layer, transport layer, network layer
+      and link layers. Topics at the application layer include client-server architectures, P2P
+      architectures, DNS and HTTP and Web applications. Topics at the transport layer include
+      multiplexing, connectionless transport and UDP, principles for reliable data transfer, connectionoriented
+      transport and TCP and TCP congestion control. Topics at the network layer include
+      forwarding, router architecture, the IP protocol and routing protocols including OSPF and BGP.
+      Topics at the link layer include multiple-access protocols, ALOHA, CSMA/CD, Ethernet,
+      CSMA/CA, wireless 802.11 networks and link-layer switches. The course includes simple
+      quantitative delay and throughput modeling, socket programming and network application
+      development and Ethereal labs</p>
+   <h3>Course Objectives</h3>
+   <ol>
+     <li>Understand state-of-the-art in network protocols, architectures, and applications</li> 
+     <li>Process of networking research - Constraints in thought process of networking research</li>
+   </ol>
  </div>
 </div>
 
