--- a/projects/index.html
+++ b/projects/index.html
@@ -49,6 +49,7 @@
             <li><a href="#">One more separated link</a></li> -->
           </ul>
         </li>
+        <li><a href="../games/index.html">Games</a></li>
       </ul>
       <!-- <form class="navbar-form navbar-left">
         <div class="form-group">
