Welcome message changed

--- a/index.html
+++ b/index.html
@@ -82,18 +82,19 @@
     <img src="graphics/janeil1.jpg" width="250px" height="250px" >
     <figcaption></figcaption>
    </figure> -->
-   <h2> Hello </h2>
+   <h2> Welcome to my website.</h2>
+   <h3> I'm currently working on this website. Feel free to check courses or play the Game I have added</h3>
    <!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p> -->
  <!-- </div> -->
 </div>
 </div>
 <div class="second">
 <div class="container">
-  <h2> Second </h2>
+  <!-- <h2> Second </h2> -->
   
 </div>
 </div>
-
+<!-- </div> -->
 <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
