--- a/index.html
+++ b/index.html
@@ -82,8 +82,12 @@
     <img src="graphics/janeil1.jpg" width="250px" height="250px" >
     <figcaption></figcaption>
    </figure> -->
-   <h2> Welcome to my website.</h2>
-   <h3> I'm currently working on this website. Feel free to check courses or play the Game I have added</h3>
+   <h2>
+   Janeil Atul Patel <br>
+   1023 Westside Avenue, Jersey City, NJ 07306 <br>
+   jap813@nyu.edu  <br>
+   (732)318-4774   <br>
+   </h2>
    <!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p> -->
  <!-- </div> -->
 </div>
@@ -91,6 +95,107 @@
 <div class="second">
 <div class="container">
   <!-- <h2> Second </h2> -->
+  <h2>Education</h2>
+
+ <!--  <ul class="tabs">
+        <li class="tab-link current" data-tab="tab-1">New York University <img src="graphics/nyu.jpeg" width="250" height="250"></li>
+        <li class="tab-link" data-tab="tab-2">Tab Two</li>
+  </ul>
+  <div id="tab-1" class="tab-content current">
+        <h3><strong>NEW YORK UNIVERSITY</strong>, NYC</h3>
+<h4><strong>Tandon School of Engineering, M.S. in Computer Science</strong> GPA: 3.556 May 2018<br></h4>
+<ul>
+<li class="resume"> <strong>Relevant Coursework:</strong> <emp>DevOps, Programming for Big Data Analytics, Data Structures and Algorithms, Design and
+Analysis of Algorithms, Cloud Computing, Introduction to Operating Systems, Computer Architecture, Computer
+Networking, Network Security, Database Systems, Programming Languages</emp></li></ul>
+    </div>
+    <div id="tab-2" class="tab-content">
+        contents for tab-2
+    </div> -->
+    
+    <!-- <img src="graphics/nyu.jpeg" width="250" height="250"> --><!-- <tab align=right> --><!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
+    <!-- <img src="graphics/somaiya.jpeg" width="250" height="250"></tab> -->
+  <p>
+  <h3><strong>NEW YORK UNIVERSITY</strong> (NYC, USA)</h3>
+<h4><strong>Tandon School of Engineering, M.S. in Computer Science</strong> GPA: 3.556 May 2018<br></h4>
+<ul>
+<li class="resume"> <strong>Relevant Coursework:</strong> <emp>DevOps, Programming for Big Data Analytics, Data Structures and Algorithms, Design and
+Analysis of Algorithms, Cloud Computing, Introduction to Operating Systems, Computer Architecture, Computer
+Networking, Network Security, Database Systems, Programming Languages</emp></li></ul>
+
+<h3><strong>MUMBAI UNIVERSITY (Mumbai, IND)</strong></h3>
+<h4><strong>K.J. Somaiya College of Engineering, B.E. in Electronics Engineering</strong> GPA: 7.33/10 May 2016</h4>
+<ul>
+<li class="resume"><strong>Relevant Coursework:</strong> <emp>Object Oriented Programming, Structured Programming Approach, Computer Communication
+Networks, Digital Control Systems, Digital Image Processing, Calculus, Differential Equations</emp></li></ul>
+</p>
+
+<br>
+
+<!-- Work Experience -->
+<h2>Work Experience</h2>
+<h4><emp>Graduate Teaching Assistant,</emp><strong> Data Structures and Algorithms (C++),</strong> Brooklyn June 2017- Present</h4>
+<ul>
+<li class="resume"> Mentor 10 students to understand the course and solve their difficulties.</li>
+<li class="resume">Participate in the assessment process and provided timely and appropriate feedback to all 10 students to support their
+learning.</li>
+</ul>
+<h4><emp>Summer Intern,</emp><strong> Akamai Technologies,</strong> New York City June 2017 - September 2017</h4>
+<ul>
+<li class="resume">Splunk Analysis: Provided a plane of glass view of raw data collected through Apache log Servers. Created meaningful
+reports and Visual Graphs for a better understanding of properties created and activated. Real time alerting system
+which would send emails notifying any disruptions.</li>
+<li class="resume">Shadow Operation: Shadowed calls with my mentor on 4 different Akamai Customers. Followed Engagement
+Managers and Technical Project Managers to understand the roles and responsibilities.</li>
+<li class="resume"> Technical Primer Certificate: Audited through rigorous process of Whiteboard and completed their Technical Primer
+Certification to be trained as a Technical Project Manager.</li>
+<li class="resume"> Akamai Web Performance Certified Administrators Course: Successfully completed the course with Akamai.</li>
+</ul>
+
+<br>
+
+<!-- Academic Projects -->
+<h2>Academic Projects</h2>
+<h4>DEVOPS WEB APPLICATION January 2018 - Present</h4>
+<ul>
+<li class="resume">Work on the big team project using DevOps principle.</li>
+<li class="resume">Handle the build side of the project while Sub managing the testing and development team.</li>
+<li class="resume">Analyze different build tools like Maven, Ant and Make and finalized to use the Make tool.</li>
+</ul>
+<h4>BITCOIN PRICE PREDICTION USING SENTIMENT ANALYSIS (Spark-SQL, Spark-ML, PySpark) December 2017</h4>
+<ul>
+<li class="resume">Created a Java backend coupled with Twitter4J to create a sink for consuming twitter search API and CoinDesk
+Price API.</li>
+<li class="resume">Cleaned data by using a cleaning module written in PySpark which utilizes tweet-preprocessor.</li>
+<li class="resume">Used Vader for Sentiment Analysis part to obtain RMSE of 102.</li>
+</ul>
+
+<h4>SPARPA – SPORTS WEBSITE (HTML, CSS, PHP, SQL) December 2017<h4>
+<ul>
+<li class="resume">Designed a sports networking website for sports aficionados to share their thoughts and belief.</li>
+<li class="resume">Created good E-R diagram which helped in storing the data efficiently and without any duplications.</li>
+</ul>
+
+<br>
+
+<!-- Technical Skills -->
+<h2>Technical Skills</h2>
+<p>
+<ul>
+<li class="resume">Programming Languages: Java, C/C++, SQL/PL SQL, Python, Haskell, Hadoop, MapReduce, Pig Latin, Apache Spark.</li>
+<li class="resume">Database Development: Oracle, Microsoft SQL Server</li>
+<li class="resume">Operating Systems: Windows ME/XP/7/8/10, OS X, Linux</li>
+<li class="resume">Other skills: MS Office, DNS, HTTP/HTTPS, How Internet Works.</li>
+<li class="resume">Soft Skills: Time/Meeting Management, Internal vs. Client Communication, Confidence vs. Over Confidence</li>
+</ul>
+</p>
+
+<br>
+
+
+
+<br>
+<br>
   
 </div>
 </div>
