Changes with fonts,uppercase,lowercase

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="styling.css">
   <link rel="stylesheet" type="text/javascript" href="code.js">
+  
+
+  <link>
 	
     </head>
 <body>
@@ -22,13 +25,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="./index.html">Janeil Patel</a>
+      <a class="navbar-brand" href="index.html">Janeil Patel</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#"> Home <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="index.html"> Home <span class="sr-only">(current)</span></a></li>
         <li><a href="projects/index.html">Projects</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Courses Taken <span class="caret"></span></a>
@@ -60,11 +63,11 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="photogallery/index.html">Photo Gallery</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">More <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="blogs/index.html">Blog</a></li>
+            <li><a href="extras/index.html">Extras</a></li>
+            <li><a href="feedback/index.html">Feedback</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">Separated link</a></li>
           </ul>
@@ -117,14 +120,14 @@ Networking, Network Security, Database Systems, Programming Languages</emp></li>
     <!-- <img src="graphics/somaiya.jpeg" width="250" height="250"></tab> -->
   <p>
   <h3><strong>NEW YORK UNIVERSITY</strong> (NYC, USA)</h3>
-<h4><strong>Tandon School of Engineering, M.S. in Computer Science</strong> GPA: 3.556 May 2018<br></h4>
+<h4><strong>Tandon School of Engineering, M.S. in Computer Science</strong> GPA: 3.556 <span class="right">May 2018</span><br></h4>
 <ul>
 <li class="resume"> <strong>Relevant Coursework:</strong> <emp>DevOps, Programming for Big Data Analytics, Data Structures and Algorithms, Design and
 Analysis of Algorithms, Cloud Computing, Introduction to Operating Systems, Computer Architecture, Computer
 Networking, Network Security, Database Systems, Programming Languages</emp></li></ul>
 
-<h3><strong>MUMBAI UNIVERSITY (Mumbai, IND)</strong></h3>
-<h4><strong>K.J. Somaiya College of Engineering, B.E. in Electronics Engineering</strong> GPA: 7.33/10 May 2016</h4>
+<h3><strong>MUMBAI UNIVERSITY (MUMBAI, IND)</strong></h3>
+<h4><strong>K.J. Somaiya College of Engineering, B.E. in Electronics Engineering</strong> GPA: 7.33/10 <span class="right">May 2016</span></h4>
 <ul>
 <li class="resume"><strong>Relevant Coursework:</strong> <emp>Object Oriented Programming, Structured Programming Approach, Computer Communication
 Networks, Digital Control Systems, Digital Image Processing, Calculus, Differential Equations</emp></li></ul>
@@ -134,13 +137,13 @@ Networks, Digital Control Systems, Digital Image Processing, Calculus, Different
 
 <!-- Work Experience -->
 <h2>Work Experience</h2>
-<h4><emp>Graduate Teaching Assistant,</emp><strong> Data Structures and Algorithms (C++),</strong> Brooklyn June 2017- Present</h4>
+<h4><emp>Graduate Teaching Assistant,</emp><strong> Data Structures and Algorithms (C++),</strong> Brooklyn <span class="right">June 2017- Present</span></h4>
 <ul>
 <li class="resume"> Mentor 10 students to understand the course and solve their difficulties.</li>
 <li class="resume">Participate in the assessment process and provided timely and appropriate feedback to all 10 students to support their
-learning.</li>
+learning.</li><br>
 </ul>
-<h4><emp>Summer Intern,</emp><strong> Akamai Technologies,</strong> New York City June 2017 - September 2017</h4>
+<h4><emp>Summer Intern,</emp><strong> Akamai Technologies,</strong> New York City <span class="right">June 2017 - September 2017</span></h4>
 <ul>
 <li class="resume">Splunk Analysis: Provided a plane of glass view of raw data collected through Apache log Servers. Created meaningful
 reports and Visual Graphs for a better understanding of properties created and activated. Real time alerting system
@@ -156,21 +159,21 @@ Certification to be trained as a Technical Project Manager.</li>
 
 <!-- Academic Projects -->
 <h2>Academic Projects</h2>
-<h4>DEVOPS WEB APPLICATION January 2018 - Present</h4>
+<h4>DEVOPS WEB APPLICATION <span class="right">January 2018 - Present</span></h4>
 <ul>
 <li class="resume">Work on the big team project using DevOps principle.</li>
 <li class="resume">Handle the build side of the project while Sub managing the testing and development team.</li>
 <li class="resume">Analyze different build tools like Maven, Ant and Make and finalized to use the Make tool.</li>
-</ul>
-<h4>BITCOIN PRICE PREDICTION USING SENTIMENT ANALYSIS (Spark-SQL, Spark-ML, PySpark) December 2017</h4>
+</ul><br>
+<h4>BITCOIN PRICE PREDICTION USING SENTIMENT ANALYSIS (Spark-SQL, Spark-ML, PySpark)<span class="right"> December 2017</span></h4>
 <ul>
 <li class="resume">Created a Java backend coupled with Twitter4J to create a sink for consuming twitter search API and CoinDesk
 Price API.</li>
 <li class="resume">Cleaned data by using a cleaning module written in PySpark which utilizes tweet-preprocessor.</li>
 <li class="resume">Used Vader for Sentiment Analysis part to obtain RMSE of 102.</li>
-</ul>
+</ul><br>
 
-<h4>SPARPA – SPORTS WEBSITE (HTML, CSS, PHP, SQL) December 2017<h4>
+<h4>SPARPA – SPORTS WEBSITE (HTML, CSS, PHP, SQL) <span class="right">December 2017</span><h4>
 <ul>
 <li class="resume">Designed a sports networking website for sports aficionados to share their thoughts and belief.</li>
 <li class="resume">Created good E-R diagram which helped in storing the data efficiently and without any duplications.</li>
