--- a/projects/index.html
+++ b/projects/index.html
@@ -22,7 +22,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Janeil Patel</a>
+      <a class="navbar-brand" href="../index.html">Janeil Patel</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -74,6 +74,18 @@
   </div><!-- /.container-fluid -->
 </nav>
 
+<div class="first">
+<div class="container">
+  <p>Click on each project to know more</p>
+  <ul>
+    <li><a href="https://gcallah.github.io/DevOps/">DevOps</a></li> <br>
+    <li><a href=""></a>SPARPA Network</li> <br>
+    <li><a href="https://github.com/janeilpatel94/BitCoin-Value-Predictor/">Bitcoin Price Predictor Using Sentiment Analysis (Big Data Project)</a></li><br>
+    <li><a href="https://github.com/janeilpatel94/chatbot-assignment">Basic Chatbot (AWS)</a></li><br>
+    <li><a href="https://github.com/janeilpatel94/restaurant_finder_aws">Restaurant Finder (AWS)</a></li><br>
+  </ul>
+</div>
+</div>
 
 <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
