--- a/photogallery/index.html
+++ b/photogallery/index.html
@@ -83,37 +83,37 @@
     <div class="row">
       <div class="col-lg-4 col-sm-6">
         <div class="thumbnail">
-          <!-- <img src="graphics/janeil10.jpeg"> -->
+          <img src="graphics/janeil10.jpeg">
         </div>
       </div>
       <div class="col-lg-4 col-sm-6">
         <div class="thumbnail">
-          <!-- <img src="graphics/janeil3.jpeg"> -->
+          <img src="graphics/janeil3.jpeg">
         </div>
       </div>
       <div class="col-lg-4 col-sm-6">
         <div class="thumbnail">
-          <!-- <img src="graphics/janeil2.jpeg"> -->
+          <img src="graphics/janeil2.jpeg">
         </div>
       </div>
       <div class="col-lg-4 col-sm-6">
         <div class="thumbnail">
-          <!-- <img src="graphics/janeil8.jpeg"> -->
+          <img src="graphics/janeil8.jpeg">
         </div>
       </div>
       <div class="col-lg-4 col-sm-6">
         <div class="thumbnail">
-          <!-- <img src="graphics/janeil4.jpeg"> -->
+          <img src="graphics/janeil4.jpeg">
         </div>
       </div>
       <div class="col-lg-4 col-sm-6">
         <div class="thumbnail">
-          <!-- <img src="graphics/janeil6.jpeg"> -->
+          <img src="graphics/janeil6.jpeg">
         </div>
       </div>
       <div class="col-lg-4 col-sm-6">
         <div class="thumbnail">
-          <!-- <img src="graphics/janeil9.jpeg"> -->
+          <img src="graphics/janeil9.jpeg">
         </div>
       </div>
       
