Course Description and course objective added

--- a/CloudComputing/index.html
+++ b/CloudComputing/index.html
@@ -78,6 +78,27 @@
  <div class="jumbotron">
     
    <h2>Cloud Computing</h2>
+   <h3>Course Desription</h3>
+   <p>
+    In this course, we will investigate cloud computing and the evolving technologies that support
+    applications in the cloud. These technologies include Platform as a Service (PAAS), Infrastructure as a Service
+    (IAAS), Software as a Service (SAAS), Business Process Modelling (BPM), SOAP and REST web-services and
+    document oriented NOSQL databases. Students will complete a programming project that will integrate data
+    from many heterogenous cloud systems and a mobile system. Over the duration of the course, the student will
+    develop a research hypothesis on how to solve a specific problem in cloud architectures by utilizing a proposed
+    improvement in one of the areas we studied over the semester. The student will test their hypothesis with an
+    implementation and disseminate the results of the research work in the form of an IEEE extended abstract
+   </p>
+   
+   <h3>Course Objectives</h3>
+   <ul>
+     <li>Focus is on learning and building extremely large scale systems and applications
+         leveraging Cloud.</li>
+     <li>Learn concepts as well as hands-on experience by using real cloud and cloud
+         technologies.</li>  
+     <li>Three key objectives: learn how to use a cloud, leverage cloud to build applications, build
+         scalable intelligent systems</li>
+   </ul>
    <!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p> -->
  </div>
 </div>
