--- a/DSA/index.html
+++ b/DSA/index.html
@@ -81,6 +81,7 @@
    <!-- <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p> -->
    <h3>Course Desription</h3>
    <h3>Course Objectives</h3>
+   <a href="../new_site/index.html">To new site</a>
  </div>
 </div>
 
