Commiting not staged content

--- a/games/index.html
+++ b/games/index.html
@@ -74,12 +74,13 @@
   </div><!-- /.container-fluid -->
 </nav>
 
+<div class="container">
 
 <h2>List of Games</h2>
 <ol>
   <li><a href="minecart/index.html"> Minecart Madness</a></li>
 </ol>
-
+</div>
 <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
